# YourOwnPersonalJean-Luc

./: .gitignore  BLUEPRINT.md  CLAUDE.md  JEAN-CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  yopj.bat  yopj.py
core/: __init__.py  audit_log.py  chat_templates.py  config.py  context_manager.py  integrity.py  model_interface.py  path_registry.py  permission_system.py  plugin_loader.py  project_detect.py  sandbox.py  server_interface.py  server_trust.py  tool_protocol.py
knowledge/: attack_patterns_archie.md  attack_patterns_zephyr.md
learning/: __init__.py  confab_detector.py  memory.py  seal_store.py  session_learner.py
tests/: __init__.py  adversarial_harness.py  archie_attack_prompts.json  battle_test.py  battle_test_r2core.py  battle_test_self.py  conftest.py  live_test.py  live_test_deepseek.py  live_test_deepseek_loop.py  live_test_multitool.py  live_test_server.py  live_test_streaming.py  test_tools.py  xti_harness.py
tools/: __init__.py  bash_exec.py  file_edit.py  file_read.py  file_write.py  git_tools.py  glob_search.py  grep_search.py  pdf_read.py  screenshot_capture.py  web_fetch.py
tools/core/: __init__.py  bash_exec.py  file_edit.py  file_read.py  file_write.py  git_tools.py  glob_search.py  grep_search.py
tools/optional/: __init__.py  calendar_check.py  pdf_read.py  screenshot_capture.py  task_schedule.py  web_fetch.py
ui/: __init__.py  cli.py
